mdt_cli/tests/snapshots/comparison__lenient_code_block_change_is_stale.snap
---
source: mdt_cli/tests/comparison.rs
expression: "&result.stale"
---
[
    StaleEntry {
        file: "[TEMP_DIR]/readme.md",
        block_name: "block",
        current_content: "\n\n```sh\nnpm install mdt\n```\n\n",
        expected_content: "\n\n```sh\ncargo install mdt\n```\n\n",
        line: 1,
        column: 1,
    },
]
