mdt_cli/tests/snapshots/comparison__lenient_inline_change_is_stale.snap
---
source: mdt_cli/tests/comparison.rs
expression: "&result.stale"
---
[
    StaleEntry {
        file: "[TEMP_DIR]/readme.md",
        block_name: "ver",
        current_content: "1.0.0",
        expected_content: "2.0.0",
        line: 1,
        column: 10,
    },
]
