mdt_cli/tests/snapshots/comparison__lenient_removed_line_is_stale.snap
---
source: mdt_cli/tests/comparison.rs
expression: "&result.stale"
---
[
    StaleEntry {
        file: "[TEMP_DIR]/readme.md",
        block_name: "block",
        current_content: "\n\nLine one.\n\n",
        expected_content: "\n\nLine one.\nLine two.\n\n",
        line: 1,
        column: 1,
    },
]
