mdt_cli/tests/snapshots/comparison__lenient_word_change_is_stale.snap
---
source: mdt_cli/tests/comparison.rs
expression: "&result.stale"
---
[
    StaleEntry {
        file: "[TEMP_DIR]/readme.md",
        block_name: "docs",
        current_content: "\n\nInstall with yarn.\n\n",
        expected_content: "\n\nInstall with npm.\n\n",
        line: 1,
        column: 1,
    },
]
