mdt_cli/tests/snapshots/comparison__strict_content_change_is_stale.snap
---
source: mdt_cli/tests/comparison.rs
expression: "&result.stale"
---
[
    StaleEntry {
        file: "[TEMP_DIR]/readme.md",
        block_name: "block",
        current_content: "\n\nModified.\n\n",
        expected_content: "\n\nOriginal.\n\n",
        line: 1,
        column: 1,
    },
]
