mdt_cli/tests/snapshots/comparison__strict_extra_blank_lines_is_stale.snap
---
source: mdt_cli/tests/comparison.rs
expression: "&result.stale"
---
[
    StaleEntry {
        file: "[TEMP_DIR]/readme.md",
        block_name: "block",
        current_content: "\n\n\n\n# Title\n\n\n\nParagraph.\n\n\n",
        expected_content: "\n\n# Title\n\nParagraph.\n\n",
        line: 1,
        column: 1,
    },
]
