mdt_cli/tests/snapshots/comparison__strict_single_extra_newline_is_stale.snap
---
source: mdt_cli/tests/comparison.rs
expression: "&result.stale"
---
[
    StaleEntry {
        file: "[TEMP_DIR]/readme.md",
        block_name: "block",
        current_content: "\n\nContent\n\n\n",
        expected_content: "\n\nContent\n\n",
        line: 1,
        column: 1,
    },
]
