mdt_cli/tests/snapshots/comparison__strict_trailing_whitespace_is_stale.snap
---
source: mdt_cli/tests/comparison.rs
expression: "&result.stale"
---
[
    StaleEntry {
        file: "[TEMP_DIR]/readme.md",
        block_name: "block",
        current_content: "\n\nHello.   \n\n",
        expected_content: "\n\nHello.\n\n",
        line: 1,
        column: 1,
    },
]
